# forgeops-manager

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  codeql.yml  github-release.yml  social_sync.yml
docs/: architecture.md  ci.md  cli.md  pre-commit.md  setup.md  troubleshooting.md  vscode.md
scripts/: setup.ps1  setup.sh
src/: __init__.py  main.py  setup.cfg
src/providers/: __init__.py  base.py
src/providers/github/: __init__.py  actions.py  api.py  cache.py  packages.py  releases.py  security.py  social.py
src/providers/gitlab/: __init__.py  mock.py
src/utils/: __init__.py  config.py  http.py  http_client.py  runtime.py  structured_logging.py  token_guard.py
tests/: conftest.py  test_cache.py  test_packages.py  test_releases.py  test_security.py
