[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------
# Metadati progetto (PEP 621)
# ---------------------------------------------------------
[project]
name = "forgeops-manager"
version = "1.0.0"
description = "CLI enterprise per manutenzione e pulizia risorse GitHub/GitLab (cache Actions, releases, packages, Code Scanning) con logging strutturato e gestione rate-limit."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Lorenzo Biosa", email = "lorenzo@biosa-labs.com" }
]
keywords = ["github", "gitlab", "cli", "automation", "cleanup", "code-scanning", "actions-cache"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

# Dipendenze runtime
dependencies = [
  "requests>=2.32.0",
  "PyYAML>=6.0.2"
]

# Optional dependencies (dev/quality/security)
[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "black>=24.10.0",
  "isort>=5.13.2",
  "flake8>=6.1.0",
  "flake8-bugbear>=24.8.19",
  "flake8-comprehensions>=3.14.0",
  "flake8-builtins>=2.5.0",
  "flake8-pyproject>=1.2.3",
  "mypy>=1.11.2",
  "types-requests>=2.32.0.20240820",
  "types-PyYAML>=6.0.12.20240917",
  "pre-commit>=3.7.0",
  "detect-secrets>=1.4.0",
  "bandit>=1.7.5",
  "pip-audit>=2.7.0"
]

# Entry point CLI
[project.scripts]
forgeops-manager = "src.main:main"

# ---------------------------------------------------------
# Layout sorgente (src/)
# ---------------------------------------------------------
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# ---------------------------------------------------------
# Black
# ---------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"
exclude = '''
/(
    \.venv
  | build
  | dist
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.tox
  | \.nox
  | docs/_build
)/
'''

# ---------------------------------------------------------
# isort (profilo Black)
# ---------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "dist", "build"]
known_first_party = ["src"]

# ---------------------------------------------------------
# Mypy (strict) + override tests
# ---------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
check_untyped_defs = true
ignore_missing_imports = false
show_error_codes = true
pretty = true
mypy_path = ["src"]
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_no_return = false
